[package]
name = "kodegen_bundler_sign"
version = "0.10.10"
edition = "2024"
description = "KODEGEN.ᴀɪ: Database query and schema exploration MCP tools for AI agents."
license = "Apache-2.0 OR MIT"
authors = ["KODEGEN.ᴀɪ"]
homepage = "https://kodegen.ai"
repository = "https://github.com/cyrup-ai/kodegen-bundler-sign"
readme = "README.md"
categories = ["development-tools","api-bindings"]
keywords = [
    "mcp",
    "client",
    "agent",
    "claude"
]

[[bin]]
name = "kodegen_bundler_sign"
path = "src/main.rs"

[dependencies]
cyrup_termcolor = "2"

clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
dirs = "6"
shellexpand = "3"
kodegen_config = { version = "0.10" }
rcgen = "0.14"
reqwest = { version = "0.12", features = ["json"] }
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
base64 = "0.22"
thiserror = "2"
tempfile = "3"

# File locking for keychain import synchronization (async support)
fs4 = { version = "0.13", features = ["tokio"] }

# Random password generation for temporary p12 files
rand = "0.9"

# Secure memory clearing
zeroize = { version = "1", features = ["derive"] }

# Binary path finding for osslsigncode
which = "8"

# Certificate expiry date handling
chrono = { version = "0.4", features = ["serde"] }

# Helper building and GitHub upload dependencies
cc = "1"                          # Compile C code for helper
zip = "6"                         # Create ZIP files
sha2 = "0.10"                       # Checksums
hex = "0.4"                         # Hex encoding
tokio = { version = "1", features = ["full"] }  # Async runtime (full feature set for streaming I/O)
bytes = "1"                       # For file upload
octocrab = "0.48"                   # GitHub API (for direct access to upload_asset)
